Correction for soap ui tests in the build
git-svn-id: https://joinup.ec.europa.eu/svn/cipaedelivery/trunk@1705 564210f0-7af0-437e-9e94-ac8d0acde024